src/tests/function-declarations/24.txt
function-declarations/24.c:0:1: error: no main function defined
 
 ^
